fixed alignment of page

--- a/styles/index.css
+++ b/styles/index.css
@@ -60,9 +60,9 @@ p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 100%;
   height: 100%;
-  margin: 5%;
+  margin: 5% 0% 7.5% 0%;
 }
 
 .landing-section-content {
@@ -135,7 +135,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 90%;
+  width: 100%;
   height: 100%;
   margin: 5%;
 }
